<resources>
    <string name="app_name">Lecture2-Assignment2</string>
    <string name="text_red">Red</string>
    <string name="text_indigo">Indigo</string>
    <string name="text_orange">Orange</string>
    <string name="text_violet">Violet</string>
    <string name="text_blue">Blue</string>
    <string name="text_yellow">Yellow</string>
    <string name="text_green">Green</string>


</resources>
