<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_height="100dp"
        android:layout_width="match_parent"
        android:id="@+id/txtvw_violet"
        android:text="@string/text_violet"
        android:textColor="@color/background_material_dark"
        android:background="@color/violet"
        android:textAlignment="center"

        />
    <TextView
        android:layout_height="100dp"
        android:layout_width="match_parent"
        android:id="@+id/txtvw_indigo"
        android:text="@string/text_indigo"
        android:textColor="@color/background_material_dark"
        android:background="@color/indigo"
        android:textAlignment="center"
        />
    <TextView
        android:layout_height="100dp"
        android:layout_width="match_parent"
        android:id="@+id/txtvw_blue"
        android:text="@string/text_blue"
        android:textColor="@color/background_material_dark"
        android:background="@color/blue"
        android:textAlignment="center"
        />
    <TextView
        android:layout_height="100dp"
        android:layout_width="match_parent"
        android:id="@+id/txtvw_green"
        android:text="@string/text_green"
        android:textColor="@color/background_material_dark"
        android:background="@color/green"
        android:textAlignment="center"
        />
    <TextView
        android:layout_height="100dp"
        android:layout_width="match_parent"
        android:id="@+id/txtvw_yellow"
        android:text="@string/text_yellow"
        android:textColor="@color/background_material_dark"
        android:background="@color/yellow"
        android:textAlignment="center"
        />
    <TextView
        android:layout_height="100dp"
        android:layout_width="match_parent"
        android:id="@+id/txtvw_orange"
        android:text="@string/text_orange"
        android:textColor="@color/background_material_dark"
        android:background="@color/orange"
        android:textAlignment="center"
        />
    <TextView
        android:layout_height="100dp"
        android:layout_width="match_parent"
        android:id="@+id/txtvw_red"
        android:text="@string/text_red"
        android:textColor="@color/background_material_dark"
        android:background="@color/red"
        android:textAlignment="center"
        />
</LinearLayout>